--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -6,8 +6,15 @@ video {
   z-index: -1;
 }
 
-.hero-container {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
+img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+}
+
+.hero {
   height: 100vh;
   width: 100%;
   display: flex;
@@ -18,14 +25,34 @@ video {
   object-fit: contain;
 }
 
+.hero-container {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  object-fit: contain;
+}
+
 .hero-container > h1 {
+  color: #c5c5c5;
+  font-size: 42px;
+  margin-top: -150px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+}
+
+.hero-container > h2 {
   color: #fff;
-  font-size: 140px;
-  margin-top: -100px;
+  font-size: 84px;
+  margin-top: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
 .hero-container > p {
-  margin-top: 8px;
+  margin-top: 50px;
   margin-left: 400px;
   margin-right: 400px;
   text-align: center;
