--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -37,18 +37,17 @@ img {
 
 .hero-container > h1 {
   color: #c5c5c5;
-  font-size: 42px;
   margin-top: -150px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-size: 42px;
+  font-weight: 300;
+  font-family: 'Poppins', sans-serif;
 }
 
 .hero-container > h2 {
   color: #fff;
   font-size: 84px;
   margin-top: 20px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .hero-container > p {
@@ -58,8 +57,8 @@ img {
   text-align: center;
   color: #fff;
   font-size: 24px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-weight: 400;
+  font-family: 'Poppins', sans-serif;;
 }
 
 .hero-btns {
