--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -41,13 +41,16 @@ img {
   font-size: 42px;
   font-weight: 300;
   font-family: 'Poppins', sans-serif;
+  letter-spacing: 4px;
 }
 
 .hero-container > h2 {
   color: #fff;
   font-size: 84px;
   margin-top: 20px;
+  font-weight: 700;
   font-family: 'Poppins', sans-serif;
+  letter-spacing: 12px;
 }
 
 .hero-container > p {
