--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -44,6 +44,6 @@
 
 .nav-links:hover {
   /*border-bottom: 4px solid #fff;*/
-  color: #dd6b01;
+  color: #ff932e;
   transition: all 0.2s ease-out;
 }
