--- a/src/components/pages/Home/HeroSection.css
+++ b/src/components/pages/Home/HeroSection.css
@@ -6,12 +6,14 @@ video {
   z-index: -1;
 }
 
-img {
+.hero-container > img {
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
+  position: absolute;
+  inset: 0;
 }
 
 .hero {
