--- a/src/components/pages/Home/HeroSection.css
+++ b/src/components/pages/Home/HeroSection.css
@@ -50,6 +50,24 @@ video {
   align-items: center;
 }
 
+.transition-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to top,
+    rgba(19, 19, 19, 1) 0%,
+    rgba(19, 19, 19, 1) 5%, /* Adjusted stop */
+    rgba(19, 19, 19, 0) 25%, /* Adjusted stop */
+    rgba(19, 19, 19, 0) 50%, /* Adjusted stop */
+    rgba(19, 19, 19, 0) 70%, /* Adjusted stop */
+    rgba(19, 19, 19, 0) 100%
+  );
+  z-index: 100;
+}
+
 .hero-text-container > h1 {
   color: #c5c5c5;
   margin-top: -250px;
