--- a/src/components/pages/Home/HeroSection.css
+++ b/src/components/pages/Home/HeroSection.css
@@ -59,10 +59,8 @@ video {
   background: linear-gradient(
     to top,
     rgba(19, 19, 19, 1) 0%,
-    rgba(19, 19, 19, 1) 5%, /* Adjusted stop */
+    rgba(19, 19, 19, .75) 5%, /* Adjusted stop */
     rgba(19, 19, 19, 0) 25%, /* Adjusted stop */
-    rgba(19, 19, 19, 0) 50%, /* Adjusted stop */
-    rgba(19, 19, 19, 0) 70%, /* Adjusted stop */
     rgba(19, 19, 19, 0) 100%
   );
   z-index: 100;
