--- a/src/components/pages/Home/ContentSection.css
+++ b/src/components/pages/Home/ContentSection.css
@@ -21,11 +21,57 @@
   opacity: 0.5;
 }
 
+.experience-seperator-line {
+  width: 100%;
+  height: 1px;
+  background:  #ffffff;
+  opacity: 0.2;
+}
+
 .section-content-about {
   display: grid;
   grid-template-columns: 1fr 300px;
   grid-gap: 2.4rem;
   gap: 2.4rem;
+}
+
+.section-content-experience {
+  padding: 1rem;
+}
+
+.experience-item-header-1, .experience-item-header-2 {
+  display: flex;
+  justify-content: space-between; /* Align to the left and right */
+  align-items: center; /* Vertically center align */
+  margin-bottom: 10px;
+}
+
+.experience-item-header-1 > h1 {
+  font-size: 25px;
+  text-align: left;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.experience-item-header-1 > h2 {
+  font-size: 20px;
+  text-align: right;
+  font-weight: 300;
+  color: #ffffff;
+}
+
+.experience-item-header-2 > h1 {
+  font-size: 20px;
+  text-align: left;
+  font-weight: 700;
+  color: #ff932e;
+}
+
+.experience-item-header-2 > h2 {
+  font-size: 20px;
+  text-align: right;
+  font-weight: 300;
+  color: #ffffff;
 }
 
 .content-section {
