--- a/src/components/pages/Home/HeroSection.css
+++ b/src/components/pages/Home/HeroSection.css
@@ -36,6 +36,7 @@ video {
 .hero-container {
   height: 100vh;
   width: 100%;
+  margin-top: -30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
