--- a/src/components/ShootingStar.css
+++ b/src/components/ShootingStar.css
@@ -6,14 +6,6 @@
   position: absolute;
 }
 
-.trail-line {
-  width: 100%;
-  height: 1px;
-  position: relative;
-  background:  #919191;
-  opacity: 0.5;
-}
-
 .shooting-star-generator {
   position: absolute;
   height: 100%;
@@ -22,7 +14,11 @@
 }
 
 line {
-  stroke-width: 1px;
+  stroke-width: 2px;
   stroke-linecap: round;
-  fill: transparent;
+  stroke: #919191;
+}
+
+circle {
+  fill: white;
 }
