--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,22 +1,15 @@
 .navbar {
-  /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
-  background-color: transparent;
-  height: 80px;
+  position: fixed; /* or use 'absolute' depending on your layout */
+  top: 0;
+  height: 60px;
+  width: 100%;
+  background-color: transparent; /* Set your desired background color */
+  z-index: 999; /* Adjust the z-index value as needed to make it overlay other content */
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
-  top: 0;
-  z-index: 999;
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-  max-width: 1500px;
+  backdrop-filter: blur(10px);
 }
 
 .nav-menu {
