--- a/src/components/pages/Home/ContentSection.css
+++ b/src/components/pages/Home/ContentSection.css
@@ -46,28 +46,28 @@
   margin-bottom: 10px;
 }
 
-.experience-item-header-1 > h1 {
+.experience-item-header-1 > h2 {
   font-size: 25px;
   text-align: left;
   font-weight: 700;
   color: #ffffff;
 }
 
-.experience-item-header-1 > h2 {
+.experience-item-header-1 > h3 {
   font-size: 20px;
   text-align: right;
   font-weight: 300;
   color: #ffffff;
 }
 
-.experience-item-header-2 > h1 {
+.experience-item-header-2 > h2 {
   font-size: 20px;
   text-align: left;
   font-weight: 700;
   color: #ff932e;
 }
 
-.experience-item-header-2 > h2 {
+.experience-item-header-2 > h3 {
   font-size: 20px;
   text-align: right;
   font-weight: 300;
@@ -105,6 +105,7 @@ h1 {
   color: #ffffff;
   font-size: 50px;
   text-align: center;
+  letter-spacing: 4px;
 }
 
 p {
