--- a/src/components/pages/Home/ContentSection.css
+++ b/src/components/pages/Home/ContentSection.css
@@ -33,9 +33,19 @@
   grid-template-columns: 1fr 300px;
   grid-gap: 2.4rem;
   gap: 2.4rem;
+  padding: 1rem;
+}
+
+.section-content-projects {
+  padding: 1rem;
 }
 
 .section-content-experience {
+  padding: 1rem;
+}
+
+.section-content-contact {
+  text-align: center;
   padding: 1rem;
 }
 
@@ -89,6 +99,15 @@
   transition: all 0.2s ease-out;
 }
 
+.contact-email {
+  color: #ffffff;
+}
+
+.contact-email:hover {
+  color:  #ff932e;
+  transition: all 0.2s ease-out;
+}
+
 .oval-container {
   background-color: #2c2c2c; 
   opacity: 1;
@@ -111,5 +130,5 @@ h1 {
 p {
   color: #ffffff;
   font-size: 18px;
-  font-weight: 200;
+  font-weight: 250;
 }
