--- a/src/components/pages/Home/ContentSection.css
+++ b/src/components/pages/Home/ContentSection.css
@@ -3,7 +3,10 @@
   z-index: 10;
   max-width: 1150px;
   margin: auto;
-  padding: 4.8rem;
+  padding-left: 4.8rem;
+  padding-right: 4.8rem;
+  padding-top: 14.4rem; 
+  padding-bottom: 14.4rem;  
   overflow: hidden;
 }
 
