--- a/src/components/pages/Home/ContentSection.css
+++ b/src/components/pages/Home/ContentSection.css
@@ -5,8 +5,8 @@
   margin: auto;
   padding-left: 4.8rem;
   padding-right: 4.8rem;
-  padding-top: 14.4rem; 
-  padding-bottom: 14.4rem;  
+  padding-top: 24rem; 
+  padding-bottom: 24rem;  
   overflow: hidden;
 }
 
@@ -155,6 +155,10 @@
 
 .content-section {
   padding: 4rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-top: 4rem; 
+  padding-bottom: 0rem;  
   background: #131313;
 }
 
