--- a/src/components/pages/Home/ProjectPopup.css
+++ b/src/components/pages/Home/ProjectPopup.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100vh;
   backdrop-filter: blur(5px);
+  filter: drop-shadow(0px 0px 100px #ff932e);
   display: flex;
   justify-content: center;
   align-items: center;
