--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,6 +30,7 @@
 
 .nav-item .active {
   color: #ff932e;
+  filter: drop-shadow(0px 0px 10px #ff932e);
   transition: all 0.2s ease-out;
 }
 
@@ -45,5 +46,6 @@
 .nav-links:hover {
   /*border-bottom: 4px solid #fff;*/
   color: #ff932e;
+  filter: drop-shadow(0px 0px 10px #ff932e);
   transition: all 0.2s ease-out;
 }
