--- a/src/components/pages/Home/ContentSection.css
+++ b/src/components/pages/Home/ContentSection.css
@@ -124,6 +124,7 @@
 
 .projects-item-learn-more-text:hover {
   text-decoration: underline;
+  filter: drop-shadow(0px 0px 10px #ff932e);
 }
 
 .projects-item-header-1 > h2 {
@@ -188,11 +189,13 @@
 
 .linkIcon {
   color: #ff932e;
+  filter: drop-shadow(0px 0px 10px #ff932e);
   margin-left: 20px;
 }
 
 .linkIcon:hover {
   color:  #ffffff;
+  filter: drop-shadow(0px 0px 0px #ff932e);
   transition: all 0.2s ease-out;
 }
 
@@ -202,6 +205,7 @@
 
 .linkIcon-projects:hover {
   color:  #ff932e;
+  filter: drop-shadow(0px 0px 10px #ff932e);
   transition: all 0.2s ease-out;
 }
 
@@ -212,6 +216,7 @@
 
 .contact-email:hover {
   color:  #ff932e;
+  filter: drop-shadow(0px 0px 10px #ff932e);
   transition: all 0.2s ease-out;
 }
 
@@ -223,6 +228,7 @@
 
 .contact-linkedin-text:hover {
   text-decoration: underline;
+  filter: drop-shadow(0px 0px 10px #ff932e);
 }
 
 .tool-container {
