init implementation of stars displayed on whole page

--- a/src/components/ShootingStar.css
+++ b/src/components/ShootingStar.css
@@ -16,10 +16,11 @@
 }
 
 .shooting-star-generator {
-  position: absolute;
+  position: fixed;
   height: 100%;
   width: 100%;
   align-items: center;
+  z-index: 0;
 }
 
 line {
