--- a/src/components/pages/Home/ProjectPopup.css
+++ b/src/components/pages/Home/ProjectPopup.css
@@ -11,6 +11,23 @@
   z-index: 100;
 }
 
+.close-button-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px; /* Adjust this value to position the button as desired */
+  right: 10px; /* Adjust this value to position the button as desired */
+  color: #ffffff;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+
 .project-pop-up-inner {
   position: relative;
   width: 100%;
@@ -39,15 +56,6 @@
   height: 70%;
   align-items: center;
   padding: 2rem;
-}
-
-.close-button {
-  position: absolute;
-  top: 10px; /* Adjust this value to position the button as desired */
-  right: 10px; /* Adjust this value to position the button as desired */
-  color: #ffffff;
-  background-color: transparent;
-  cursor: pointer;
 }
 
 .project-pop-up-text > h2 {
